<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_article"
            android:icon="@drawable/ic_article"
            android:title="@string/Article" />
        <item
            android:id="@+id/nav_univ"
            android:icon="@drawable/ic_school_black_24dp"
            android:title="@string/universite" />
        <item
            android:id="@+id/nav_ecole_centre_de_formation"
            android:icon="@drawable/ic_ecole_centre_de_formation"
            android:title="@string/Ecole_et_centre" />
        <item
            android:id="@+id/nav_promo"
            android:icon="@drawable/ic_promo__black_24dp"
            android:title="@string/Promotion" />
        <item
            android:id="@+id/nav_evenement"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/Evenement" />
        <item
            android:id="@+id/nav_insolite"
            android:icon="@drawable/ic_mood_black_24dp"
            android:title="@string/Insolite" />

    </group>

    <item android:title="Communication">
        <menu>
            <item
                android:id="@+id/nav_qui_sommes_sn"
                android:icon="@drawable/ic_qui_sommes"
                android:title="@string/Qui" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_contact_phone_black_24dp"
                android:title="@string/Contact" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Envoyer Mail" />
        </menu>
    </item>

</menu>
